# compgraph_homework

./: .gitignore
hw_1/: CMakeLists.txt
hw_1/two_triangles/: FragmentShader2.fragmentshader  two_triangles.cpp
puck/: FragmentShader.fragmentshader  VertexShader.vertexshader  puck.cpp
two_triangles/: FragmentShader1.fragmentshader
